@@ -12,7 +12,7 @@ import net.minecraft.client.render.VertexConsumerProvider;
 import net.minecraft.client.render.block.entity.BlockEntityRenderer;
 import net.minecraft.client.render.block.entity.BlockEntityRendererFactory;
 import net.minecraft.client.render.item.ItemRenderer;
-import net.minecraft.client.render.model.json.ModelTransformation;
+import net.minecraft.client.render.model.json.ModelTransformationMode;
 import net.minecraft.client.texture.SpriteAtlasTexture;
 import net.minecraft.client.util.SpriteIdentifier;
 import net.minecraft.client.util.math.MatrixStack;
@@ -20,12 +20,14 @@ import net.minecraft.item.ItemStack;
 import net.minecraft.particle.ParticleTypes;
 import net.minecraft.util.collection.DefaultedList;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.RotationAxis;
 import net.minecraft.util.math.Vec3d;
 import net.minecraft.world.World;
 
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.EnumSet;
+import java.util.List;
+import java.util.Map;
 
 public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTinkererBlockEntity> {
 
@@ -35,11 +37,13 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
     private static final ModelPart mainModel;
 
     static {
-        ModelPart.Cuboid columnCuboid = new ModelPart.Cuboid(0, 0, 0, 0, 0, 2, 6, 2, 0, 0, 0, false, 32, 32);
-        ModelPart.Cuboid mainCuboid = new ModelPart.Cuboid(8, 0, 0, 0, 0, 4, 12, 4, 0, 0, 0, false, 32, 32);
+        columnModel = new ModelPart(List.of(
+                new ModelPart.Cuboid(0, 0, 0, 0, 0, 2, 6, 2, 0, 0, 0, false, 32, 32, EnumSet.allOf(Direction.class))
+        ), Map.of());
 
-        columnModel = new ModelPart(Collections.singletonList(columnCuboid), new HashMap<>());
-        mainModel = new ModelPart(Collections.singletonList(mainCuboid), new HashMap<>());
+        mainModel = new ModelPart(List.of(
+                new ModelPart.Cuboid(8, 0, 0, 0, 0, 4, 12, 4, 0, 0, 0, false, 32, 32, EnumSet.allOf(Direction.class))
+        ), Map.of());
     }
 
     private static final double twoPi = Math.PI * 2;
@@ -49,7 +53,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
 
     public void render(GemTinkererBlockEntity blockEntity, float tickDelta, MatrixStack matrixStack, VertexConsumerProvider vertexConsumerProvider, int i, int j) {
 
-        scalar = blockEntity.getScalar();
+        this.scalar = blockEntity.getScalar();
 
         final World world = blockEntity.getWorld();
         final BlockPos pos = blockEntity.getPos();
@@ -58,7 +62,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
         DefaultedList<ItemStack> items = blockEntity.getInventory();
         ItemRenderer itemRenderer = MinecraftClient.getInstance().getItemRenderer();
         float itemRotation = (float) (System.currentTimeMillis() / 30d % 360);
-        final float scaledRotation = (float) (itemRotation + Math.pow(scalar * 2, 1.5));
+        final float scaledRotation = (float) (itemRotation + Math.pow(this.scalar * 2, 1.5));
         final boolean particles = blockEntity.particles();
 
         // ---
@@ -71,7 +75,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
         matrixStack.translate(0.125, 0.85, 0.125);
         matrixStack.scale(0.5f, 0.5f, 0.5f);
         matrixStack.multiply(RotationAxis.POSITIVE_Y.rotationDegrees(itemRotation));
-        itemRenderer.renderItem(items.get(0), ModelTransformation.Mode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, 0);
+        itemRenderer.renderItem(items.get(0), ModelTransformationMode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, world, 0);
 
         if (particles) {
             ClientParticles.setParticleCount(20);
@@ -93,7 +97,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
         matrixStack.translate(0.0625, 0.425, 0.0625);
         matrixStack.scale(0.25f, 0.25f, 0.25f);
         matrixStack.multiply(RotationAxis.POSITIVE_Y.rotationDegrees(scaledRotation));
-        itemRenderer.renderItem(items.get(1), ModelTransformation.Mode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, 0);
+        itemRenderer.renderItem(items.get(1), ModelTransformationMode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, world, 0);
 
         if (particles && !items.get(1).isEmpty()) spawnItemParticles(world, pos, 0.1, 0.45, 0.5 * twoPi);
 
@@ -109,7 +113,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
         matrixStack.translate(0.0625, 0.425, 0.0625);
         matrixStack.scale(0.25f, 0.25f, 0.25f);
         matrixStack.multiply(RotationAxis.POSITIVE_Y.rotationDegrees(scaledRotation));
-        itemRenderer.renderItem(items.get(2), ModelTransformation.Mode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, 0);
+        itemRenderer.renderItem(items.get(2), ModelTransformationMode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, world, 0);
 
         if (particles && !items.get(2).isEmpty()) spawnItemParticles(world, pos, 0.45, 0.1, 1.5 * twoPi);
 
@@ -125,7 +129,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
         matrixStack.translate(0.0625, 0.425, 0.0625);
         matrixStack.scale(0.25f, 0.25f, 0.25f);
         matrixStack.multiply(RotationAxis.POSITIVE_Y.rotationDegrees(scaledRotation));
-        itemRenderer.renderItem(items.get(3), ModelTransformation.Mode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, 0);
+        itemRenderer.renderItem(items.get(3), ModelTransformationMode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, world, 0);
 
         if (particles && !items.get(3).isEmpty()) spawnItemParticles(world, pos, 0.45, 0.8, twoPi);
 
@@ -141,7 +145,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
         matrixStack.translate(0.0625, 0.425, 0.0625);
         matrixStack.scale(0.25f, 0.25f, 0.25f);
         matrixStack.multiply(RotationAxis.POSITIVE_Y.rotationDegrees(scaledRotation));
-        itemRenderer.renderItem(items.get(4), ModelTransformation.Mode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, 0);
+        itemRenderer.renderItem(items.get(4), ModelTransformationMode.GROUND, i, OverlayTexture.DEFAULT_UV, matrixStack, vertexConsumerProvider, world, 0);
 
         if (particles && !items.get(4).isEmpty()) spawnItemParticles(world, pos, 0.8, 0.45, 0);
 
@@ -152,7 +156,7 @@ public class GemTinkererBlockEntityRenderer implements BlockEntityRenderer<GemTi
     }
 
     private double getHeight(double offset) {
-        return Math.sin((System.currentTimeMillis() / 800d + offset * twoPi) % (twoPi)) * 0.01 * scalar;
+        return Math.sin((System.currentTimeMillis() / 800d + offset * twoPi) % (twoPi)) * 0.01 * this.scalar;
     }
 
     private void spawnItemParticles(World world, BlockPos pos, double x, double z, double offset) {
